force-app/main/default/objects/Opportunity/fields/TipoVenta__c.field-meta.xml
<CustomField>
    <fullName>TipoVenta__c</fullName>
    <label>Tipo de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Navideños</fullName>
            </value>
            <value>
                <fullName>Trademarketing</fullName>
            </value>
            <value>
                <fullName>Pedido Unico</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Cruzada</fullName>
            </value>
            <value>
                <fullName>Upselling</fullName>
            </value>
            <value>
                <fullName>Indefinido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>