force-app/main/default/objects/Opportunity/fields/UltimaActividadAsunto__c.field-meta.xml
<CustomField>
    <fullName>UltimaActividadAsunto__c</fullName>
    <label>Ultima actividad asunto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>