force-app/main/default/objects/Opportunity/fields/UltimaActividadCerrada__c.field-meta.xml
<CustomField>
    <fullName>UltimaActividadCerrada__c</fullName>
    <formula>IF(NOT(ISBLANK(UltimaActvidad__c)),HYPERLINK(&#39;/&#39;&amp;UltimaActvidad__c,  UltimaActividadAsunto__c  , &#39;_self&#39;), &#39;No hay actividades cerradas&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultima actividad cerrada</label>
    <type>Text</type>
</CustomField>