force-app/main/default/objects/Opportunity/fields/UltimaActvidad__c.field-meta.xml
<CustomField>
    <fullName>UltimaActvidad__c</fullName>
    <label>Ultima actvidad</label>
    <length>18</length>
    <type>Text</type>
</CustomField>