force-app/main/default/objects/Opportunity/fields/UseType__c.field-meta.xml
<CustomField>
    <fullName>UseType__c</fullName>
    <label>Tipo de Uso</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Familia__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caja chica</fullName>
            </value>
            <value>
                <fullName>Viáticos</fullName>
            </value>
            <value>
                <fullName>Gastos de operación</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>