force-app/main/default/objects/Opportunity/fields/UseType_Other__c.field-meta.xml
<CustomField>
    <fullName>UseType_Other__c</fullName>
    <label>Campo para especificar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>