force-app/main/default/objects/Opportunity/fields/UsoProducto__c.field-meta.xml
<CustomField>
    <fullName>UsoProducto__c</fullName>
    <label>Uso del producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>