force-app/main/default/objects/Opportunity/fields/VentaCruzadaMKT__c.field-meta.xml
<CustomField>
    <fullName>VentaCruzadaMKT__c</fullName>
    <inlineHelpText>Servicio adicional de interés para el cliente</inlineHelpText>
    <label>Venta cruzada MKT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CategoriaSolucion</valueSetName>
    </valueSet>
</CustomField>