force-app/main/default/objects/Opportunity/fields/VentaTrademarketing_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>VentaTrademarketing_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venta Trademarketing</label>
    <type>Checkbox</type>
</CustomField>