force-app/main/default/objects/Opportunity/fields/VentaTradeMarketing_PL__c.field-meta.xml
<CustomField>
    <fullName>VentaTradeMarketing_PL__c</fullName>
    <label>Venta Trade Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Familia__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>NO APLICA</fullName>
                <isActive>false</isActive>
                <label>NO APLICA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>