force-app/main/default/objects/Opportunity/fields/Volumen_incremento__c.field-meta.xml
<CustomField>
    <fullName>Volumen_incremento__c</fullName>
    <description>Volumen de emisión de opp incremento</description>
    <label>Volumen de incremento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>