force-app/main/default/objects/Opportunity/fields/VolumenComision__c.field-meta.xml
<CustomField>
    <fullName>VolumenComision__c</fullName>
    <formula>IF(AND( Producto__r.NumeroProducto__c  &lt;&gt; 31,ComisionEmision__c* Amount&lt;219.12)  , 219.12,(ComisionEmision__c* Amount))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volumen de comisión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>