force-app/main/default/objects/Opportunity/fields/VolumenComisionActual__c.field-meta.xml
<CustomField>
    <fullName>VolumenComisionActual__c</fullName>
    <formula>ComisionEmisionActual__c * CompraMensualActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volumen de comisión actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>