force-app/main/default/objects/Opportunity/fields/VolumenEmision2__c.field-meta.xml
<CustomField>
    <fullName>VolumenEmision2__c</fullName>
    <label>Volumen Potencial</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Etapa__c</field>
        <operation>notEqual</operation>
        <value>Perdida</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>