force-app/main/default/objects/Opportunity/recordTypes/BPfleet.recordType-meta.xml
<RecordType>
    <fullName>BPfleet</fullName>
    <active>true</active>
    <businessProcess>Ventas</businessProcess>
    <label>BPfleet</label>
</RecordType>