force-app/main/default/objects/Opportunity/recordTypes/Closed.recordType-meta.xml
<RecordType>
    <fullName>Closed</fullName>
    <active>true</active>
    <businessProcess>Ventas</businessProcess>
    <description>Cerrado</description>
    <label>Cerrada</label>
</RecordType>