force-app/main/default/objects/Opportunity/recordTypes/Incremento.recordType-meta.xml
<RecordType>
    <fullName>Incremento</fullName>
    <active>true</active>
    <businessProcess>Posventa</businessProcess>
    <label>Upselling (Incremento)</label>
</RecordType>