force-app/main/default/objects/Opportunity/recordTypes/Incremento_Inicio.recordType-meta.xml
<RecordType>
    <fullName>Incremento_Inicio</fullName>
    <active>true</active>
    <businessProcess>Posventa</businessProcess>
    <label>Incremento Inicio</label>
</RecordType>