force-app/main/default/objects/Opportunity/recordTypes/Migracion.recordType-meta.xml
<RecordType>
    <fullName>Migracion</fullName>
    <active>true</active>
    <businessProcess>Ventas</businessProcess>
    <label>Migración</label>
</RecordType>