force-app/main/default/objects/Opportunity/recordTypes/RT_NuevaAfiliacion.recordType-meta.xml
<RecordType>
    <fullName>RT_NuevaAfiliacion</fullName>
    <active>true</active>
    <businessProcess>Afiliación</businessProcess>
    <label>Nueva Afiliación</label>
</RecordType>