force-app/main/default/objects/Opportunity/recordTypes/RT_NuevaSolucion.recordType-meta.xml
<RecordType>
    <fullName>RT_NuevaSolucion</fullName>
    <active>true</active>
    <businessProcess>Afiliación</businessProcess>
    <label>Nueva Solución</label>
</RecordType>