force-app/main/default/objects/Opportunity/recordTypes/VentaNueva.recordType-meta.xml
<RecordType>
    <fullName>VentaNueva</fullName>
    <active>true</active>
    <businessProcess>Ventas</businessProcess>
    <label>Venta nueva</label>
</RecordType>