force-app/main/default/objects/Opportunity/validationRules/Cambio_de_Maquila.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambio_de_Maquila</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(ISCHANGED( Maquila__c ), ISCHANGED(  Maquilador__c )),
 isConverted__c ==TRUE,
 $Profile.Name &lt;&gt; &#39;Administrador del sistema&#39;
)</errorConditionFormula>
    <errorMessage>No puede cambiar el maquilador</errorMessage>
</ValidationRule>