force-app/main/default/objects/Opportunity/validationRules/EtapaPerdidaIndicarMotivo.validationRule-meta.xml
<ValidationRule>
    <fullName>EtapaPerdidaIndicarMotivo</fullName>
    <active>true</active>
    <description>Debe indicar en el campo Motivo, el motivo de la pérdida.</description>
    <errorConditionFormula>AND ( 
ISPICKVAL( StageName , &quot;Perdida&quot;), 
ISBLANK(Text( Motivo__c)), 
RecordType.DeveloperName &lt;&gt; &quot;Incremento&quot; 
)</errorConditionFormula>
    <errorMessage>Debe indicar en el campo Motivo, el motivo de la pérdida.</errorMessage>
</ValidationRule>