force-app/main/default/objects/Opportunity/validationRules/Fecha_de_cierre_mayor_a_fecha_creacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_cierre_mayor_a_fecha_creacion</fullName>
    <active>false</active>
    <errorConditionFormula>OR(AND(ISNEW(),CloseDate&lt;Today()), AND (CloseDate &lt; DATEVALUE(CreatedDate), DATEVALUE ( CreatedDate )&gt;DATE (2015,12,10)))</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>La fecha de cierre debe ser mayor a la fecha de creación</errorMessage>
</ValidationRule>