force-app/main/default/objects/Opportunity/validationRules/ImplementacionAS400.validationRule-meta.xml
<ValidationRule>
    <fullName>ImplementacionAS400</fullName>
    <active>false</active>
    <description>Valida que si la etapa es igual a Implementación en la cuenta se tenga el código AS400</description>
    <errorConditionFormula>(ISBLANK(Account.CodigoClienteAS400__c)  &amp;&amp;  ISBLANK(Account.IdCuentaOPAM__c))  &amp;&amp;   ISPICKVAL(StageName, &quot;Implementación&quot;)</errorConditionFormula>
    <errorMessage>No puedes pasar a etapa de implementación si la cuenta no tiene código AS400 / OPAM</errorMessage>
</ValidationRule>