force-app/main/default/objects/Opportunity/validationRules/Lost_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(PRIORVALUE(StageName)) = &#39;Perdida&#39; &amp;&amp;
NOT(ISCHANGED(MaxEnd__c)) &amp;&amp;
$Profile.Name &lt;&gt; &#39;Administrador del sistema&#39;</errorConditionFormula>
    <errorMessage>Una oportunidad perdida no puede modificarse.</errorMessage>
</ValidationRule>