force-app/main/default/objects/Opportunity/validationRules/Maquilador_Reglas.validationRule-meta.xml
<ValidationRule>
    <fullName>Maquilador_Reglas</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
OR(TEXT(Maquilador__c)== &quot;G500 FLEET&quot;
, TEXT(Maquilador__c) == &quot;Recomendado Chedraui&quot;
, TEXT(Maquilador__c) == &quot;Recomendado Element&quot;
, TEXT(Maquilador__c) == &quot;Recomendado Hidrosina&quot;
, TEXT(Maquilador__c) == &quot;Recomendado Servifacil&quot;
),
TEXT(LeadSource )&lt;&gt;&quot;Recomendado&quot; 
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Coloque la opción:  &quot;Recomendado&quot;</errorMessage>
</ValidationRule>