force-app/main/default/objects/Opportunity/validationRules/No_permitir_modificar_Opp_Ganada.validationRule-meta.xml
<ValidationRule>
    <fullName>No_permitir_modificar_Opp_Ganada</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &#39;Administrador del sistema&#39;,
TEXT(PRIORVALUE(StageName)) =&#39;Ganada&#39;,
TEXT(StageName) =&#39;Ganada&#39;,
NOT(ISCHANGED(MaxEnd__c)),
NOT(ISCHANGED(MaxStart__c)),
NOT(ISCHANGED(MinEnd__c)),
NOT(ISCHANGED(MinStart__c))
)</errorConditionFormula>
    <errorMessage>No se puede modificar una oportunidad ganada</errorMessage>
</ValidationRule>