force-app/main/default/objects/Opportunity/validationRules/NoModificarAprobacionBP.validationRule-meta.xml
<ValidationRule>
    <fullName>NoModificarAprobacionBP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;BPfleet&#39;, PRIORVALUE( BPfleetApproval__c )== BPfleetApproval__c,BPfleetApproval__c ,NOT(ISCHANGED( StatusApprovalBPfleet__c)),NOT(ISNEW()), NOT(ISPICKVAL(StatusApprovalBPfleet__c, &#39;Aprobado&#39;)),ISCHANGED(StageName))</errorConditionFormula>
    <errorMessage>Para poder cambiar de etapa es necesario solicitar la aprobación de la Oportunidad</errorMessage>
</ValidationRule>