force-app/main/default/objects/Opportunity/validationRules/NoStageChangesUntilOwnerChanges.validationRule-meta.xml
<ValidationRule>
    <fullName>NoStageChangesUntilOwnerChanges</fullName>
    <active>true</active>
    <description>No se puede avanzar a ninguna etapa, hasta que sea reasignada a un ejecutivo que corresponda a la business unit relacionada a la solución asociada a la oportunidad.</description>
    <errorConditionFormula>AND ( ISCHANGED( StageName ),  OwnerChangeRequired__c = true )</errorConditionFormula>
    <errorMessage>No puede avanzar a ninguna etapa, favor de reasignar la oportunidad a un ejecutivo que corresponda a la business unit relacionada a la solución asociada a la oportunidad.</errorMessage>
</ValidationRule>