force-app/main/default/objects/Opportunity/validationRules/OnlyDigitsAndCommaForControlNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyDigitsAndCommaForControlNumber</fullName>
    <active>true</active>
    <description>Número de control sólo acepta dígitos y comas.</description>
    <errorConditionFormula>AND(
LEN ( Control_number__c ) &lt;&gt; 0,
NOT(REGEX(Control_number__c, &quot;[0-9,]*&quot;))
)</errorConditionFormula>
    <errorDisplayField>Control_number__c</errorDisplayField>
    <errorMessage>Favor de sólo incluir números y comas en el número de control.</errorMessage>
</ValidationRule>