force-app/main/default/objects/Opportunity/validationRules/Oportunidad_RegistroPatronalOPAM.validationRule-meta.xml
<ValidationRule>
    <fullName>Oportunidad_RegistroPatronalOPAM</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(StageName, &quot;Cotización&quot;)),
  NOT(ISPICKVAL(StageName, &quot;Perdida&quot;)),
  ISBLANK(RegistroPatronalOPAM__c),
  Es_OPAM__c=True)</errorConditionFormula>
    <errorMessage>Ingresar el Registro Patronal OPAM</errorMessage>
</ValidationRule>