force-app/main/default/objects/Opportunity/validationRules/OportunidadSinCotizacion_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>OportunidadSinCotizacion_VR</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( PRIORVALUE( StageName ) , &#39;Cotización&#39;) &amp;&amp;
ISPICKVAL( StageName, &#39;Contrato&#39;) &amp;&amp;
ISBLANK(  Producto_cotizacion__c  )</errorConditionFormula>
    <errorMessage>Para pasar a la siguiente etapa se necesita tener una cotización</errorMessage>
</ValidationRule>