force-app/main/default/objects/Opportunity/validationRules/OrigenNuevoNegocio.validationRule-meta.xml
<ValidationRule>
    <fullName>OrigenNuevoNegocio</fullName>
    <active>true</active>
    <description>El origen es obligatorio cuando se trata de un nuevo negocio.</description>
    <errorConditionFormula>AND(ISPICKVAL( Type, &quot;Nuevo negocio&quot;), ISBLANK(TEXT(LeadSource)))</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Indique el origen del nuevo tipo de negocio</errorMessage>
</ValidationRule>