force-app/main/default/objects/Opportunity/validationRules/Sector_Obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Sector_Obligatorio</fullName>
    <active>true</active>
    <description>Sector de la cuenta debe ser obligatorio</description>
    <errorConditionFormula>AND(
ISCHANGED( StageName ) ,
OR( AND(TEXT(PRIORVALUE(StageName ))==&#39;Cotización&#39; ,TEXT(StageName) ==&#39;Contrato&#39;),
AND(TEXT(PRIORVALUE(StageName ))==&#39;Contrato&#39; ,TEXT(StageName) ==&#39;Alta de cliente&#39;)),
OR(ISNULL(TEXT(Account.Sector__c)) ,ISBLANK(TEXT(Account.Sector__c)))
)</errorConditionFormula>
    <errorMessage>Debe ingresar un sector en la cuenta para cambiar de etapa</errorMessage>
</ValidationRule>