force-app/main/default/objects/Opportunity/validationRules/Tipo_de_Uso_Obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Tipo_de_Uso_Obligatorio</fullName>
    <active>false</active>
    <description>Campo de Tipo de Uso Obligatorio cuando la familia sea Viáticos</description>
    <errorConditionFormula>ISPICKVAL(Familia__c, &quot;Viáticos&quot;) &amp;&amp; ISPICKVAL(UseType__c, &quot;&quot;) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorDisplayField>UseType__c</errorDisplayField>
    <errorMessage>Campo Obligatorio cuando la familia sea Viáticos</errorMessage>
</ValidationRule>