force-app/main/default/objects/Opportunity/validationRules/Tipo_de_Uso_Otro_Obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Tipo_de_Uso_Otro_Obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(UseType__c, &quot;Otro&quot;) &amp;&amp; (UseType_Other__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>UseType_Other__c</errorDisplayField>
    <errorMessage>Debe de ingresar una especificación</errorMessage>
</ValidationRule>