force-app/main/default/objects/Opportunity/validationRules/Valida_Aprobacion_en_etapa.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Aprobacion_en_etapa</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
   AND(
       Solicitar_validaci_n_descuentos__c=TRUE,
       NOT(ISPICKVAL(StageName, &#39;Perdida&#39;)),
       ISCHANGED(StageName)
   ), 
   AND(
       Rechazo_validaci_n_descuentos__c=TRUE,
       NOT(ISPICKVAL(StageName, &#39;Perdida&#39;)),
       ISCHANGED(StageName)
   )
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Para pasar de etapa debe haber sido Aprobada la Oportunidad.</errorMessage>
</ValidationRule>