force-app/main/default/objects/Opportunity/validationRules/Valida_Etapa_AltaCliente.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Etapa_AltaCliente</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(StageName),&#39;Alta de cliente&#39;),
AND($Profile.Name!=&#39;Ejecutivo de ADV&#39;,$Profile.Name!=&#39;Administrador del sistema&#39;,$Profile.Name&lt;&gt;&#39;Ventas Extranjeras&#39; ,$Profile.Name&lt;&gt;&#39;Extranjero_Exp_Reportes&#39; ),
ISCHANGED(StageName),
OR(Text(StageName)=&#39;Implementación&#39;,
Text(StageName)=&#39;Perdida&#39;
)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>La oportunidad solo puede pasar a etapa Implementación o Perdida.</errorMessage>
</ValidationRule>