force-app/main/default/objects/Opportunity/validationRules/Valida_Etapa_Implementacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Etapa_Implementacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(StageName),&#39;Implementación&#39;), $Profile.Name&lt;&gt;&#39;Administrador del sistema&#39;, ISCHANGED(StageName), NOT (OR(Text(StageName)=&#39;Ganada&#39;, Text(StageName)=&#39;Perdida&#39;, Text(StageName)=&#39;Implementación&#39;)))</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>La oportunidad solo puede pasar a etapa Ganada o Perdida.</errorMessage>
</ValidationRule>