force-app/main/default/objects/Opportunity/validationRules/Valida_negocio_existente.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_negocio_existente</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK(  Account.CodigoClienteAS400__c  ) , ISPICKVAL(  Type  , &quot;Negocio existente&quot;),ISBLANK(Account.IdCuentaOPAM__c))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>No puede seleccionar Negocio existente si la Cuenta no tiene Código de Cliente</errorMessage>
</ValidationRule>