force-app/main/default/objects/Opportunity/validationRules/Valida_RFC_en_etapa_Contrato.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_RFC_en_etapa_Contrato</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK( Account.RFC__c ) , ISPICKVAL( StageName , &quot;Contrato&quot;))</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Para pasar a etapa Contrato debe tener capturado el RFC en la Cuenta</errorMessage>
</ValidationRule>