force-app/main/default/objects/Opportunity/validationRules/Volumen_Emision_y_Producto_obligatorios.validationRule-meta.xml
<ValidationRule>
    <fullName>Volumen_Emision_y_Producto_obligatorios</fullName>
    <active>false</active>
    <description>Es necesario capturar el volumen de emisión y el producto para pasar a la etapa de Contrato</description>
    <errorConditionFormula>AND( ISBLANK(  Amount)  ||  ( ISBLANK( Producto__c)), ISPICKVAL(StageName,&#39;Contrato&#39;) ||  (ISPICKVAL( StageName, &#39;Implementación&#39;)||  (ISPICKVAL(StageName, &#39;Pedido&#39;)||  (ISPICKVAL(StageName,&#39;Piloto&#39;)||  (ISPICKVAL(StageName,&#39;Ganada&#39;)||  (ISPICKVAL(StageName,&#39;Perdida&#39;)))))))</errorConditionFormula>
    <errorMessage>Los campos de Volumen de Emisión y Producto son obligatorios</errorMessage>
</ValidationRule>