force-app/main/default/objects/Opportunity/listViews/MisOportunidades_VL.listView-meta.xml
<ListView>
    <fullName>MisOportunidades_VL</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>SegmentoCuenta_FText__c</columns>
    <columns>Familia__c</columns>
    <columns>Producto_cotizacion__c</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>Competidor__c</columns>
    <columns>VolumenEmision2__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Oportunidades</label>
</ListView>