force-app/main/default/objects/Opportunity/listViews/OportunidadesPAC_VL.listView-meta.xml
<ListView>
    <fullName>OportunidadesPAC_VL</fullName>
    <booleanFilter>3 AND (1 OR 2)</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Familia__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_MONTHS:2</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Ganada</value>
    </filters>
    <label>Oportunidades PAC</label>
</ListView>