force-app/main/default/objects/Opportunity/listViews/TodasOportunidades_LV.listView-meta.xml
<ListView>
    <fullName>TodasOportunidades_LV</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>SegmentoCuenta_FText__c</columns>
    <columns>Familia__c</columns>
    <columns>Producto_cotizacion__c</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>Competidor__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Oportunidades</label>
</ListView>